--- a/webrtc-conf.toml
+++ b/webrtc-conf.toml
@@ -1,4 +1,4 @@
-# 调试模式 yes/no
+# 调试模式
 debug = true
 
 # 数据库
@@ -18,7 +18,7 @@ enable = "1"
 # 密码
 [password]
 # 复杂密码检查
-strict_mode = false
+strict_mode = true
 #最小长度
 length = 8
 #最少大写字母
@@ -47,7 +47,7 @@ https = true
 # 日志输出位置 debug 模式下无效
 log = "server.log"
 # 资源文件位置
-resource = "static"
+resource = "resources"
 # 证书文件位置 http 模式下无效
 [app.signature]
 crt = "sign/cert.pem"
