--- a/webrtc-conf.toml
+++ b/webrtc-conf.toml
@@ -15,6 +15,29 @@ password = "1234567"
 level = "0"
 enable = "1"
 
+[[database.account]]
+no="9999999"
+name = "监控"
+password = "9999999"
+level = "1"
+enable = "1"
+
+# 账号测试
+[[database.account]]
+no="0"
+name = "张张"
+password = "00"
+level = "0"
+enable = "0"
+
+# 监考测试
+[[database.account]]
+no="1"
+name = "监控"
+password = "00"
+level = "1"
+enable = "0"
+
 # 密码
 [password]
 # 复杂密码检查
@@ -29,21 +52,6 @@ lower = 1
 digital = 1
 #最少特殊字符
 other = 1
-
-[[database.account]]
-no="9999999"
-name = "监控"
-password = "9999999"
-level = "1"
-enable = "1"
-
-# 监考测试
-[[database.account]]
-no="1"
-name = "监控"
-password = "1"
-level = "1"
-enable = "0"
 
 
 # 应用
